--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@chakra-ui/system": "^2.6.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "core-js": "^3.47.0",
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.3",
     "next-themes": "^0.4.6",
@@ -30,6 +31,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@swc/core": "^1.15.3",
+    "@swc/jest": "^0.2.39",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
